--- a/baseApp/src/main/res/layout/item_data.xml
+++ b/baseApp/src/main/res/layout/item_data.xml
@@ -12,7 +12,7 @@
         android:id="@+id/txt_name"
         style="@style/TextView.Screen.Title"
         android:text="Area name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/txt_phone"
@@ -35,6 +35,12 @@
         style="@style/TextView.Screen.Description"
         android:ellipsize="end"
         android:text="Lich tuoi ngay tuoi 3 lan" />
+
+    <TextView
+        android:id="@+id/txt_repeat"
+        style="@style/TextView.Screen.Description"
+        android:ellipsize="end"
+        android:text="Lap lai" />
 
 </LinearLayout>
 
