--- a/baseApp/src/main/res/layout/schedule_item_view.xml
+++ b/baseApp/src/main/res/layout/schedule_item_view.xml
@@ -12,7 +12,7 @@
         android:id="@+id/txt_name"
         style="@style/TextView.Screen.Title"
         android:text="Area name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/txt_schedule"
