--- a/baseApp/src/main/res/values/dimens.xml
+++ b/baseApp/src/main/res/values/dimens.xml
@@ -27,12 +27,13 @@
 
     <dimen name="connect_text_size_30">30sp</dimen>
     <dimen name="connect_text_size_36">36sp</dimen>
-    <dimen name="connect_text_size_title">22sp</dimen>
+    <dimen name="connect_text_size_title">20sp</dimen>
     <dimen name="connect_text_size_description">16sp</dimen>
     <dimen name="connect_text_size_error">16sp</dimen>
 
     <dimen name="connect_text_size_menu">16sp</dimen>
     <dimen name="connect_text_size_22">22sp</dimen>
+    <dimen name="connect_text_size_20">20sp</dimen>
     <dimen name="connect_text_size_18">18sp</dimen>
     <dimen name="connect_text_size_16">16sp</dimen>
 
