--- a/baseApp/src/main/res/layout/notification_view.xml
+++ b/baseApp/src/main/res/layout/notification_view.xml
@@ -20,8 +20,6 @@
             android:layout_gravity="top"
             android:background="@drawable/card_view_style"
             android:gravity="center|left"
-
-
             android:orientation="horizontal">
 
             <ImageView
@@ -53,5 +51,17 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+
+        <TextView
+            android:id="@+id/txt_empty"
+            style="@style/TextView.Screen.Title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/sms_receiver_empty"
+            android:textColor="@color/color_dark"
+            android:textSize="@dimen/connect_text_size_30"
+            android:visibility="gone" />
     </LinearLayout>
 </layout>
