--- a/baseApp/src/main/res/layout/setting_schedule_activity.xml
+++ b/baseApp/src/main/res/layout/setting_schedule_activity.xml
@@ -36,11 +36,9 @@
             <TextView
                 android:id="@+id/txt_title"
                 style="@style/TextView.Screen.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="@dimen/connect_margin_10"
                 android:gravity="center|left"
-                android:text="Cài Đặt Lich Tuoi" />
+                android:text="@string/setting_schedule_title" />
 
         </LinearLayout>
 
@@ -54,8 +52,6 @@
             <TextView
                 android:id="@+id/txt_empty"
                 style="@style/TextView.Screen.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:onClick="openEmptyScreen"
@@ -69,23 +65,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/connect_margin_10"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/txt_schedule_all"
                     style="@style/TextView.Screen.Title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:layout_gravity="center|top"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/bg_button_style"
+                    android:layout_margin="@dimen/connect_margin_10"
+                    android:background="@drawable/border_rect_bg"
                     android:gravity="center"
                     android:minHeight="@dimen/actionbar_height"
-                    android:onClick="openSettingAllArea"
-                    android:text="Cài dat cho tat ca khu vuc" />
+                    android:onClick="stopScheduleAllArea"
+                    android:text="@string/setting_schedule_off_all_area" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView"
