--- a/baseApp/src/main/res/layout/activity_main.xml
+++ b/baseApp/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.motor.connect.feature.data.UserViewModel" />
+            type="com.motor.connect.feature.main.UserViewModel" />
     </data>
 
     <RelativeLayout
