--- a/baseApp/src/main/res/layout/detail_view.xml
+++ b/baseApp/src/main/res/layout/detail_view.xml
@@ -138,7 +138,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:text="Đang hoạt động"
+                            android:text="@string/detail_motor_running"
                             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                         <TextView
